force-app/main/default/objects/Product_Cost__c/Product_Cost__c.object-meta.xml
<CustomObject>
    <label>Product Cost</label>
    <nameField>
        <displayFormat>T2-{000000}</displayFormat>
        <label>Cost Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Costs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>