force-app/main/default/objects/Product_Cost__c/fields/BusinessId__c.field-meta.xml
<CustomField>
    <fullName>BusinessId__c</fullName>
    <description>SalesTori businessId</description>
    <label>BusinessId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>