force-app/main/default/objects/Product_Cost__c/fields/Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Cost_Multiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Multiplier OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>