force-app/main/default/objects/Product_Cost__c/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <label>Max. Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>