force-app/main/default/objects/Product_Cost__c/fields/ProductCostMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ProductCostMultiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Cost Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>