force-app/main/default/objects/Product_Cost__c/validationRules/Multiplier_within_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiplier_within_Range</fullName>
    <active>false</active>
    <description>Checks the Multiplier is within Min and Max Values</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
 (Cost_Multiplier__c &lt;  Min_Value__c  || Cost_Multiplier__c &gt; Max_Value__c )</errorConditionFormula>
    <errorMessage>Multiplier is not within Range</errorMessage>
</ValidationRule>