force-app/main/default/objects/Product_Cost__c/listViews/Additional_Costs_Product_Costs.listView-meta.xml
<ListView>
    <fullName>Additional_Costs_Product_Costs</fullName>
    <columns>Organization__c</columns>
    <columns>District__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Multiplier__c</columns>
    <columns>Max_Value__c</columns>
    <columns>Min_Value__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cost_Type__c</field>
        <operation>equals</operation>
        <value>ulk.as.pal,nostvuokra,kulukorv.,perustus,rahti,vakuutus,lupahakem.,alihankint</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LFIXEDWALL,LG,LGS,LUMONKAIDE,VT3,VT4</value>
    </filters>
    <label>Additional Costs Product Costs</label>
</ListView>