force-app/main/default/objects/Product_Cost__c/listViews/LGR_Product_Costs.listView-meta.xml
<ListView>
    <fullName>LGR_Product_Costs</fullName>
    <columns>Organization__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>District__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Multiplier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization__c</field>
        <operation>equals</operation>
        <value>LSU</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LG</value>
    </filters>
    <label>LGR Product Costs</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>