force-app/main/default/objects/Product_Cost__c/listViews/Services_Product_Costs.listView-meta.xml
<ListView>
    <fullName>Services_Product_Costs</fullName>
    <columns>Organization__c</columns>
    <columns>District__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Multiplier__c</columns>
    <columns>Max_Value__c</columns>
    <columns>Min_Value__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>MÄÄRÄAIKAISHUOLTO,UUDISTAVAHUOLTO,HUOLTO,PERUSHUOLTO</value>
    </filters>
    <label>Services Product Costs</label>
</ListView>